@@ -4,6 +4,11 @@
 	Nuke unsupported NDBM routines.  Shrink the hash table a bit, over
 	25% of the buckets were going empty.
 
+	* Makefile.am:
+	* hw/Makefile.am:
+	* hw/*/Makefile.am:
+	Bug #4190: Add a rule for 'make relink' since automake sucks.
+
 2005-12-26  Daniel Stone  <daniel@freedesktop.org>
 
 	* xkb/xkbInit.c:
